<resources>
    <string name="app_name">BookElectrone</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <string name="settings_information">
        Programmer: tg @shnupikzxc \n
        Version 1.0 (278) \n
    </string>
    <string name="app_version_string">Version 1.0 (278)</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="name_book_open">Book name</string>
    <string name="name_label">Name</string>
    <string name="description_label">Description</string>
    <string name="text_item">Text</string>

    <string name="header_in_header">Header</string>
    <string name="search_in_header">Search…</string>

    <string name="home_label">Home</string>
    <string name="collections_label">Collections</string>
    <string name="bookmarks_label">Bookmarks</string>

    <string name="settings_label">Settings</string>
    <string name="dark_mode_label">Dark mode:</string>
    <string name="font_label">Font:</string>
    <string name="report_label">Reports:</string>
    <string name="generate_label">Generate</string>

    <string name="change_label">Change</string>
    <string name="set_image_label">Set image</string>
    <string name="add_to_collection_label">Add to collection</string>

    <string name="delete_label">Delete</string>

    <string name="user_label">User</string>
    <string name="login_label">Login</string>
    <string name="password_label">Password</string>
    <string name="email_label">Email</string>
    <string name="save_label">Save</string>
    <string name="logout_label">Logout</string>
    <string name="delete_account_label">Delete account</string>

    <string name="book_report_label">Book report</string>
    <string name="book_cover_label">Book cover</string>
    <string name="path_to_file_label">Path to file</string>
    <string name="collection_label">Collection</string>
    <string name="number_of_pages_label">Number of pages</string>
    <string name="page_format">Page format</string>
    <string name="document_format_label">Document format</string>
    <string name="number_of_bookmarks_label">Number of bookmarks:</string>
    <string name="list_is_empty_label">List is empty</string>
    <string name="close_label">Close</string>

    <string name="registration_label">Registration</string>
    <string name="i_already_have_an_account_label">I already have an account</string>
    <string name="register_label">Register</string>
    <string name="authorization_label">Authorization</string>
    <string name="i_dont_have_an_account_label">i don\'t have an account</string>
    <string name="login_in_label">Login</string>

    <string name="please_wait_label">Please wait…</string>
    <string name="error_empty_response_label">Error: An empty response was received from the server!</string>
    <string name="successfully_label">Successfully</string>
    <string name="wrong_password_label">You entered an incorrect password!</string>
    <string name="error_label">" Error! "</string>
    <string name="error_processing_data_label">Error processing data from the server!</string>
    <string name="no_internet_connect_label">No network connection!</string>
    <string name="delete_account_question_label">Are you sure you want to delete your account? This action is irreversible.\nTo confirm, enter your password:</string>
    <string name="cancel_label">Cancel</string>
    <string name="error_empty_field_label">The field cannot be empty</string>
    <string name="logout_question_label">Are you sure you want to log out?</string>
    <string name="you_logout_label">You have logged out</string>

    <string name="enter_correct_login_label">Enter a valid login!</string>
    <string name="enter_password_label">Enter your password!</string>
    <string name="enter_correct_name_label">Enter a valid name!</string>
    <string name="enter_correct_email_label">Enter a valid email!</string>

    <string name="select_a_book_label">Select a book</string>
    <string name="you_no_login_label">You are not logged in!</string>
    <string name="you_account_delete_label">Your account has been deleted!</string>
    <string name="empty_label">Empty</string>
    <string name="failed_to_generate_report_label">Failed to generate report</string>
    <string name="error_login_exist_label">No such login exists!</string>
    <string name="login_or_email_already_label">A user with this login or email already exists!</string>
    <string name="permission_not_granted_label">Permission not granted</string>
    <string name="select_collection_label">Select a collection</string>
    <string name="enter_name_label">Enter title:</string>
    <string name="failed_to_load_book_label">Failed to load the book</string>
    <string name="add_bookmark_label">Add bookmark</string>
    <string name="rename_book_label">Rename book</string>
    <string name="go_to_page_label">Go to page</string>
    <string name="go_to_bookmark_label">Go to bookmark</string>
    <string name="actions_label">Actions:</string>
    <string name="enter_correct_page_label">Enter a valid page number!</string>
    <string name="enter_number_page_label">Enter page number:</string>
    <string name="enter_name_bookmark_label">Select a bookmark:</string>
    <string name="ok_label">OK</string>
    <string name="confirm_action_label">Action confirmation</string>
    <string name="you_confident_label">Are you sure about your decision?</string>
    <string name="select_image_label">Select an image</string>
    <string name="other_label">Other</string>

    <string name="filter_label">Filter by:</string>
    <string name="update_bookmark_label">Edit bookmark</string>

    <string name="a_z_label">A-Z</string>
    <string name="z_a_label">Z-A</string>

    <string name="language_label">Language:</string>
    <string name="russian_label">Русский</string>
    <string name="english_label">English</string>

    <string name="test">Tests</string>
    <string name="name_p_label">Name</string>
    <string name="download_material_label">Download material:</string>
    <string name="download_label">Download</string>
    <string name="question_label">Question</string>
    <string name="further_label">Further</string>
    <string name="result_label">Result</string>
    <string name="true_results_label">Correct answers:</string>
    <string name="from_label">" from "</string>
    <string name="error_load_test_label">Failed to load test</string>
    <string name="warning_label">Warning</string>
    <string name="warning_test_label">Are you sure you want to exit the test? Your current progress may be lost.</string>
    <string name="tests_label">Tests</string>
    <string name="state_label">State:</string>
    <string name="take_test_label">Take the test first</string>
    <string name="passed_label">Passed</string>
    <string name="no_passed_label">No passed</string>
    <string name="state_test_label">"State: "</string>
    <string name="score_test_label">"Score: "</string>
    <string name="test_again_label">Do you want to take the test again?</string>
    <string name="login_or_register_label">Please register/login to your account first!</string>
    <string name="download_book_label">Download the book</string>
    <string name="download_book_ok_label">"Do you really want to download the book "</string>
    <string name="data_download_error_label">Error receiving data!</string>
    <string name="send_to_curator_label">Send to curator</string>

    <string name="answer_true_label">The answer is correct</string>
    <string name="answer_false_label">The answer is incorrect</string>
    <string name="select_answer_label">Please select an answer option</string>
    <string name="page_label">page</string>


</resources>